prompts/meny checkpoint complete

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/farahkhancode/address-bloc/issues"
   },
-  "homepage": "https://github.com/farahkhancode/address-bloc#readme"
+  "homepage": "https://github.com/farahkhancode/address-bloc#readme",
+  "dependencies": {
+    "inquirer": "^5.1.0"
+  }
 }
