--- a/db/config/config.json
+++ b/db/config/config.json
@@ -14,7 +14,8 @@
     "database": "address-bloc-test",
     "host": "127.0.0.1",
      "dialect": "postgres",
-    "logging": false
+    "logging": false,
+    "port": "5432"
 
 }
 }
