--- a/db/config/config.json
+++ b/db/config/config.json
@@ -13,6 +13,7 @@
     "password": null,
     "database": "address-bloc-test",
     "host": "127.0.0.1",
+    "port": "5432",
      "dialect": "postgres",
     "logging": false
 
